[package]
name = "passphrase"
version = "0.5.1"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.65"
description = "random word generator"
keywords = ["keys", "secrets", "cli" ]
license = "MIT OR Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/passphrase"
repository = "https://github.com/darrylwest/passphrase"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive", "env"] }
bincode = "1.3.3"
fastrand = "1.8.0"
log = "0.4.17"
log4rs = "1.2.0"
zxcvbn = { version = "2.2.1", features = ["ser", "serde", "serde_derive"] }
base64 = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5.9"
